[tool.poetry]
name = "smsaero"
version = "0.1.0"
description = ""
authors = ["dotX12 <dev@shitposting.team>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
ujson = "^5.5.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
